--- a/angularproject/src/app/admin/products/products.component.html
+++ b/angularproject/src/app/admin/products/products.component.html
@@ -165,13 +165,15 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title fs-5" id="exampleModalLabel">Update</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
         <div class="modal-body">
             <div class ="container-fluid">
                 <div class="row">
                     <div class="col-md-3">
-                        <img class = "img-thumbnail" id="AddEmpImage" style="width: 100px; height: 100px;" src="./assets/1.png"alt=""></div>
+                        <img class = "img-thumbnail" id="UpdateImage" style="width: 50px; height: 50px;" src="./assets/1.png"alt=""></div>
                     <div class="col-md-9">
                       </div>
                 </div><br>
@@ -246,7 +248,7 @@
               <div class ="container-fluid">
                   <div class="row">
                       <div class="col-md-3">
-                          <img class = "img-thumbnail" id="AddEmpImage" style="width: 100px; height: 100px;" src="./assets/1.png"alt=""></div>
+                          <img class = "img-thumbnail" id="ShowImage" style="width: 50px; height: 50px;" src="./assets/1.png"alt=""></div>
                       <div class="col-md-9">
                         </div>
                   </div><br>
@@ -254,7 +256,7 @@
                   <div class="row"><input disabled id="sname" class="form-control"></div>
                   <div class="row">
                       <div class="col">
-                        
+
                         <label>Category</label>
                         <select disabled class="form-control" id="scategory">
                             <option id="soldcategory" value="Show"></option>
