--- a/angularproject/src/app/admin/sidebar/sidebar.component.html
+++ b/angularproject/src/app/admin/sidebar/sidebar.component.html
@@ -14,7 +14,7 @@
           <img src="dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
-          <a href="#" class="d-block">Halhatatlan Zsoldosok</a>
+          <a href="#" class="d-block">{{name}}</a>
         </div>
       </div>
 
@@ -72,8 +72,7 @@
           <li class="nav-item has-treeview menu-close">
             <a href="#" class="nav-link">
               <i class="nav-icon fas fa-cube"></i>
-              <p>
-                category
+              <p>category
                 <i class="right fas fa-angle-left"></i>
               </p>
             </a>
