homepage login window preaper

--- a/angularproject/src/app/default/dtopbar/dtopbar.component.html
+++ b/angularproject/src/app/default/dtopbar/dtopbar.component.html
@@ -14,11 +14,6 @@
         </ul>
 
         <a class="nav-link" [routerLink]="['/']">Register</a>"
-
-
+           <a data-toggle="modal" data-target="#LoginModal" class="nav-link" [routerLink]="['/']">Login</a>"
     </div>
-
-
-
-
 </nav>
