--- a/angularproject/src/app/default/default.component.html
+++ b/angularproject/src/app/default/default.component.html
@@ -15,3 +15,24 @@
     </div>
 
 </div>
+
+
+
+<!--Login Modul-->
+
+<div class="modal fade" id="LoginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title fs-5" id="exampleModalLabel">Login</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+        <app-dlogin></app-dlogin>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Login</button>
+        </div>
+      </div>
+    </div>
