email template import preparation of filter search

--- a/angularproject/src/app/default/default.component.html
+++ b/angularproject/src/app/default/default.component.html
@@ -9,7 +9,7 @@
         <!--letf sidebar -->
         <div class="col-md-2"><app-dleftsidebar></app-dleftsidebar></div>
         <!--MAIN CONTAINER -->
-        <div class="col-md-7"><router-outlet></router-outlet></div>
+        <div class="col-md-7" style="padding-top:220px;"><router-outlet></router-outlet></div>
         <!--Right sidebar registration-->
         <div class="col-md-3"><app-dregistration></app-dregistration></div>
     </div>
@@ -21,7 +21,7 @@
 <!--Login Modul-->
 
 <div class="modal fade" id="LoginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog" style="width: 25vw;">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title fs-5" id="exampleModalLabel">Login</h5>
