--- a/angularproject/src/app/default/dleftsidebar/dleftsidebar.component.html
+++ b/angularproject/src/app/default/dleftsidebar/dleftsidebar.component.html
@@ -1,1 +1,70 @@
-<p>dleftsidebar works!</p>
+<div>
+    <a href="compose.html" class="btn btn-primary btn-block mb-3" _msttexthash="60684" _msthash="116">Compose</a>
+
+    <div class="card">
+      <div class="card-header">
+        <h3 class="card-title" _msttexthash="93626" _msthash="117">Folders</h3>
+
+        <div class="card-tools">
+          <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
+          </button>
+        </div>
+      </div>
+      <div class="card-body p-0">
+        <ul class="nav nav-pills flex-column">
+          <li class="nav-item active">
+            <a href="#" class="nav-link">
+              <i class="fas fa-inbox"></i><font _mstmutation="1" _msttexthash="437515" _msthash="118"> Inbox </font><span class="badge bg-primary float-right" _msttexthash="9659" _msthash="119">12</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <i class="far fa-envelope"></i><font _mstmutation="1" _msttexthash="131547" _msthash="120"> Sent </font></a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <i class="far fa-file-alt"></i><font _mstmutation="1" _msttexthash="160433" _msthash="121"> Drafts </font></a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <i class="fas fa-filter"></i><font _mstmutation="1" _msttexthash="96356" _msthash="122"> Junk </font><span class="badge bg-warning float-right" _msttexthash="10426" _msthash="123">65</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <i class="far fa-trash-alt"></i><font _mstmutation="1" _msttexthash="97643" _msthash="124"> Trash </font></a>
+          </li>
+        </ul>
+      </div>
+      <!-- /.card-body -->
+    </div>
+    <!-- /.card -->
+    <div class="card">
+      <div class="card-header">
+        <h3 class="card-title" _msttexthash="107419" _msthash="125">Labels</h3>
+
+        <div class="card-tools">
+          <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
+          </button>
+        </div>
+      </div>
+      <div class="card-body p-0">
+        <ul class="nav nav-pills flex-column">
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <i class="far fa-circle text-danger"></i><font _mstmutation="1" _msttexthash="79677" _msthash="126"> Important </font></a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <i class="far fa-circle text-warning"></i><font _mstmutation="1" _msttexthash="179322" _msthash="127"> Promotions </font></a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <i class="far fa-circle text-primary"></i><font _mstmutation="1" _msttexthash="167947" _msthash="128"> Social </font></a>
+          </li>
+        </ul>
+      </div>
+      <!-- /.card-body -->
+    </div>
+    <!-- /.card -->
+</div>
