--- a/angularproject/src/app/default/dlogin/dlogin.component.html
+++ b/angularproject/src/app/default/dlogin/dlogin.component.html
@@ -1,1 +1,8 @@
-<p>dlogin works!</p>
+<div class="form-group">
+<label for="email">E-mail address</label>
+<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter E-mail address">
+</div>
+<div class="form-group">
+<label for="pass">Password</label>
+<input type="password" class="form-control" id="pass" placeholder="Jelszó">
+</div>
