--- a/angularproject/src/app/default/dregistration/dregistration.component.html
+++ b/angularproject/src/app/default/dregistration/dregistration.component.html
@@ -1,1 +1,23 @@
-<p>dregistration works!</p>
+<div style="border:2px solid gray; margin-top: 20px">
+    <div class="card-body">
+      <div class="form-group">
+        <label for="email">E-mail address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter E-mail address">
+      </div>
+      <div class="form-group">
+        <label for="pass">Password</label>
+        <input type="password" class="form-control" id="pass" placeholder="Jelszó">
+      </div>
+
+      <div class="form-group">
+        <label for="cpass">Confirm-Password</label>
+        <input type="password" class="form-control" id="cpass" placeholder="Confirm Password">
+      </div>
+
+    </div>
+    <!-- /.card-body -->
+
+    <div class="card-footer">
+      <button type="submit" class="btn btn-primary">Register</button>
+    </div>
+</div>
