--- a/angularproject/src/app/default/dleftsidebar/dleftsidebar.component.html
+++ b/angularproject/src/app/default/dleftsidebar/dleftsidebar.component.html
@@ -2,10 +2,11 @@
     <a href="compose.html" class="btn btn-primary btn-block mb-3" _msttexthash="60684" _msthash="116">Compose</a>
     
     
-    
+<!-- First Filter -->
+
     <div class="card">
       <div class="card-header">
-        <h3 class="card-title" _msttexthash="93626" _msthash="117">Categories</h3>
+        <h3 class="card-title">Categories</h3>
 
         <div class="card-tools">
           <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
@@ -27,6 +28,51 @@
           </li>
         </ul>
       </div>
+
+      <!-- Second Filter -->
+      <div class="card">
+        <div class="card-header">
+          <h3 class="card-title">Brands</h3>
+  
+          <div class="card-tools">
+            <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
+            </button>
+          </div>
+        </div>
+        <div class="card-body p-0">
+          <ul class="nav nav-pills flex-column">
+            <li class="nav-item active">
+              <a href="#" class="nav-link">
+                Adidas
+                <span class="badge bg-primary float-right" _msttexthash="9659" _msthash="119">12</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">
+                Nike
+              </a>
+            </li>
+
+            <li class="nav-item">
+                <a href="#" class="nav-link">
+                  Puma
+                </a>
+              </li>
+
+              <li class="nav-item">
+                <a href="#" class="nav-link">
+                  Hosentoger
+                </a>
+              </li>
+
+              <li class="nav-item">
+                <a href="#" class="nav-link">
+                  Zara
+                </a>
+              </li>
+
+          </ul>
+        </div>
       <!-- /.card-body -->
     </div>
     <!-- /.card -->
