homepage product view almost done

--- a/angularproject/src/app/default/dproducts/dproducts.component.html
+++ b/angularproject/src/app/default/dproducts/dproducts.component.html
@@ -1,21 +1,20 @@
 <div class="container-fluid" style="margin-top: 20px;">
     <div class="row">
-        <div class="col-4">
+        <div class="col-4" *ngFor="let p of products">
             <div class=" d-flex align-items-stretch">
                 <div class="card bg-light">
                   <div class="card-header text-muted border-bottom-0" _msttexthash="406705" _msthash="117"> Digitális stratéga </div>
                   <div class="card-body pt-0">
                     <div class="row">
                       <div class="col-7">
-                        <h2 class="lead"><b _msttexthash="228319" _msthash="118">Nicole Pearson</b></h2>
-                        <p class="text-muted text-sm" _msttexthash="2118090" _msthash="119"><b _istranslated="1">Körülbelül: </b> Webdesigner / UX / Grafikus / Kávé szerető </p>
-                        <ul class="ml-4 mb-0 fa-ul text-muted">
-                          <li class="small"><span class="fa-li"><i class="fas fa-lg fa-building"></i></span><font _mstmutation="1" _msttexthash="827762" _msthash="120"> Cím: Demo Street 123, Demo City 04312, NJ</font></li>
-                          <li class="small"><span class="fa-li"><i class="fas fa-lg fa-phone"></i></span><font _mstmutation="1" _msttexthash="296413" _msthash="121"> Telefon #: + 800 - 12 12 23 52</font></li>
-                        </ul>
+                        <h2 class="lead"><b>{{p.name}}</b></h2>
+                        <label>Price:</label><small>{{p.price}}</small>
+                        <label>Brand:</label><small>{{p.brand}}</small>
+                        <label>Category:</label><small>{{p.category}}</small>
+                        <label>Description:</label><small>{{p.description|slice:0:20}}</small>
                       </div>
                       <div class="col-5 text-center">
-                        <img src="assets/AdminLTE/dist/img/user1-128x128.jpg" alt="" class="img-circle img-fluid">
+                        <img src="{{p.imgpath}}" alt="" class="img-circle img-fluid">
                       </div>
                     </div>
                   </div>
