customize some title

--- a/angularproject/src/app/default/dproducts/dproducts.component.html
+++ b/angularproject/src/app/default/dproducts/dproducts.component.html
@@ -1,5 +1,8 @@
 <div class="container-fluid" style="margin-top: 20px;">
     <div class="row">
+        <h2 style="text-align: center;">All Products</h2>
+    </div>
+    <div class="row">
         <div class="col-4" *ngFor="let p of products">
             <div class=" d-flex align-items-stretch">
                 <div class="card bg-light">
