--- a/angularproject/src/app/default/dleftsidebar/dleftsidebar.component.html
+++ b/angularproject/src/app/default/dleftsidebar/dleftsidebar.component.html
@@ -1,5 +1,5 @@
 <div style="margin-top: 20px;">
-    <a href="compose.html" class="btn btn-primary btn-block mb-3" _msttexthash="60684" _msthash="116">Compose</a>
+    <a [routerLink]="['products']" class="btn btn-primary btn-block mb-3">Product Filter</a>
     
     
 <!-- First Filter -->
