--- a/angularproject/src/app/default/dproducts/dproducts.component.html
+++ b/angularproject/src/app/default/dproducts/dproducts.component.html
@@ -1,6 +1,7 @@
 <div class="container-fluid" style="margin-top: 20px;">
-    <div class="row">
-        <h2 style="text-align: center;">All Products</h2>
+    <div class="row" style="text-align: center;">
+        <div style="margin-left: 10px;">All products</div>
+        <hr>
     </div>
     <div class="row">
         <div class="col-4" *ngFor="let p of products">
@@ -24,7 +25,7 @@
                   <div class="card-footer">
                     <div class="text-right">
                       <a href="#" class="btn btn-sm bg-teal">
-                        <i class="fas fa-comments"></i>
+                        <i class="fas fa-cart-plus"></i>
                       </a>
                       <a href="#" class="btn btn-sm btn-primary">
                         <i class="fas fa-plus-circle"></i>Add to cart 
