contactus & aboutus connected

--- a/angularproject/src/app/default/dtopbar/dtopbar.component.html
+++ b/angularproject/src/app/default/dtopbar/dtopbar.component.html
@@ -7,8 +7,8 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item"><a class="nav-link" [routerLink]="['/']">Homepage</a></li>
-                <li class="nav-item"><a class="nav-link" [routerLink]="['/']">About</a></li>
-                <li class="nav-item"><a class="nav-link" [routerLink]="['/']">Contact Us</a></li>
+                <li class="nav-item"><a class="nav-link" [routerLink]="['/about']">About</a></li>
+                <li class="nav-item"><a class="nav-link" [routerLink]="['/contactus']">Contact Us</a></li>
 
 
         </ul>
