--- a/angularproject/src/app/app.component.html
+++ b/angularproject/src/app/app.component.html
@@ -1,3 +1,3 @@
-<button class="btn btn-primary">Click me</button>
+<button class="btn btn-phone">+3630262739236723 / info@hallhatatlanok.com</button>
 
 <router-outlet></router-outlet>
