--- a/angularproject/src/app/default/dregistration/dregistration.component.html
+++ b/angularproject/src/app/default/dregistration/dregistration.component.html
@@ -1,6 +1,10 @@
 <div style="border:2px solid gray; margin-top: 20px">
     <div class="card-body">
       <div class="form-group">
+        <label for="name">Name</label>
+        <input type="email" class="form-control" id="name" placeholder="Enter name">
+      </div>
+      <div class="form-group">
         <label for="email">E-mail address</label>
         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter E-mail address">
       </div>
@@ -18,6 +22,6 @@
     <!-- /.card-body -->
 
     <div class="card-footer">
-      <button type="submit" class="btn btn-primary">Register</button>
+      <button type="submit" (click)="add()" class="btn btn-primary">Register</button>
     </div>
 </div>
