login window & systeam done

--- a/angularproject/src/app/default/dlogin/dlogin.component.html
+++ b/angularproject/src/app/default/dlogin/dlogin.component.html
@@ -6,3 +6,6 @@
 <label for="pass">Password</label>
 <input type="password" class="form-control" id="pass" placeholder="Jelszó">
 </div>
+<hr>
+<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+<button sytle="margin-left: 20px;"type="button" class="btn btn-primary" data-bs-dismiss="modal">Login</button>
