debug repaired at login module

--- a/angularproject/src/app/default/dlogin/dlogin.component.html
+++ b/angularproject/src/app/default/dlogin/dlogin.component.html
@@ -1,11 +1,11 @@
 <div class="form-group">
 <label for="email">E-mail address</label>
-<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter E-mail address">
+<input type="email" class="form-control" id="lemail" placeholder="Enter E-mail address">
 </div>
 <div class="form-group">
 <label for="pass">Password</label>
-<input type="password" class="form-control" id="pass" placeholder="Jelszó">
+<input type="password" class="form-control" id="lpass" placeholder="Jelszó">
 </div>
 <hr>
 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-<button sytle="margin-left: 20px;"type="button" class="btn btn-primary" data-bs-dismiss="modal">Login</button>
+<button (click)="login()" sytle="margin-left: 10px;" type="button" class="btn btn-primary" data-bs-dismiss="modal">Login</button>
