login own name setup

--- a/angularproject/src/app/default/dtopbar/dtopbar.component.html
+++ b/angularproject/src/app/default/dtopbar/dtopbar.component.html
@@ -1,4 +1,4 @@
-<nav class = "navbar navbar-expand-lg navbar-light bg-light" style="width:100vw;">
+<nav class = "navbar navbar-expand-lg navbar-light bg-dark" style="width:100vw;">
     <a class = "navbar-brand" href="#">Hallhatatlanok</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupported">
         <span class="navbar-toggler-icon"></span>
@@ -6,9 +6,9 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item"><a class="nav-link" [routerLink]="['/']">Homepage</a></li>
-                <li class="nav-item"><a class="nav-link" [routerLink]="['/about']">About</a></li>
-                <li class="nav-item"><a class="nav-link" [routerLink]="['/contactus']">Contact Us</a></li>
+            <li class="nav-item"><a style="color:white;" class="nav-link" [routerLink]="['/']">Homepage</a></li>
+                <li class="nav-item"><a style="color:white;" class="nav-link" [routerLink]="['/about']">About</a></li>
+                <li class="nav-item"><a style="color:white;" class="nav-link" [routerLink]="['/contactus']">Contact Us</a></li>
 
 
         </ul>
