--- a/angularproject/src/app/admin/products/products.component.html
+++ b/angularproject/src/app/admin/products/products.component.html
@@ -124,16 +124,16 @@
                 <div class="row">
                     <div class="col"><select>
                         <label>Category</label>
-                        <option value="Necklase">Nyaklánc</option>
+                        <option value="Shirts">Mezek</option>
                         <option value="Shoes">Cipők</option>
-                        <option value="Watch">Órák</option>
+                        <option value="Ball">Labda</option>
                     </select></div>
                     <div class="col">
                     <label>Brands</label>
                     <select class ="form-control" id="brand">
-                        <option value="Gold">Gold</option>
+                        <option value="Nike">Nike</option>
                         <option value="Adidas">Adidas</option>
-                        <option value="Rolex">Rolex</option>
+                        <option value="Puma">Puma</option>
                     </select>
                     </div>
 
@@ -279,7 +279,7 @@
                           <option value="Kappa.">Kappa.</option>
                       </select>
                       </div>
-  
+
                       <div class="col">
                       <label>Price</label>
                       <input disabled type="number" id="sprice" class="form-control"></div>
@@ -287,7 +287,7 @@
                   <div class="row">
                       <label>Description</label>
                       <textarea disabled id="sdescription" class="form-control" style="height: 100px;">
-  
+
                       </textarea>
                   </div>
           </div>
