product display debug corrected

--- a/angularproject/src/app/admin/asidebar/asidebar.component.html
+++ b/angularproject/src/app/admin/asidebar/asidebar.component.html
@@ -1,8 +1,6 @@
 <aside class="control-sidebar control-sidebar-dark">
-  <!-- control sidebar content here! RIGHTside !! -->
-  <div class ="p-3">
+  <div class="p-3">
     <h5>Setting</h5>
-    <a (click) = "logout()" [routerLink]>Logout</a>
+    <a (click)="logout()" [routerLink]="'/'">Logout</a>
   </div>
-
 </aside>
