--- a/angularproject/src/app/app.component.html
+++ b/angularproject/src/app/app.component.html
@@ -1,3 +1,6 @@
-<button class="btn btn-phone">+3630262739236723 / info@hallhatatlanok.com</button>
-
-<router-outlet></router-outlet>
+<div class="wrapper">
+  <div class="content-wrapper ml-0">
+    <button class="btn btn-phone">+3630262739236723 / info@hallhatatlanok.com</button>
+    <router-outlet></router-outlet>
+  </div>
+</div>
