--- a/angularproject/src/app/default/default.component.html
+++ b/angularproject/src/app/default/default.component.html
@@ -1,34 +1,41 @@
 <div class="container-fluid">
-    <!--Top Home page bar -->
-    <div class="row">
-<app-dtopbar></app-dtopbar>
+  <div class="row">
+    <app-dtopbar></app-dtopbar>
+  </div>
 
+  <div class="row">
+    <div class="col-md-2 offset-1">
+      <app-dleftsidebar></app-dleftsidebar>
     </div>
-
-    <div class="row">
-        <!--letf sidebar -->
-        <div class="col-md-2"><app-dleftsidebar></app-dleftsidebar></div>
-        <!--MAIN CONTAINER -->
-        <div class="col-md-7" style="padding-top:220px;"><router-outlet></router-outlet></div>
-        <!--Right sidebar registration-->
-        <div class="col-md-3"><app-dregistration></app-dregistration></div>
+    <div class="col-md-8">
+      <router-outlet></router-outlet>
     </div>
+  </div>
 
 </div>
 
-
-
-<!--Login Modul-->
-
 <div class="modal fade" id="LoginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" style="width: 25vw;">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title fs-5" id="exampleModalLabel">Login</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+  <div class="modal-dialog" style="width: 25vw;">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title fs-5">{{loginState === 'login' ? 'Login' : 'Sign up'}}</h5>
+        <button (click)="hide()" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <app-dlogin *ngIf="loginState === 'login'"></app-dlogin>
+        <app-dregistration *ngIf="loginState === 'signup'"></app-dregistration>
+
+        <div *ngIf="loginState === 'login'" class="row mt-3">
+          <p class="text-info hover">Already have an account?
+            <a class="text-decoration-underline cursor-pointer" (click)="loginState = 'signup'">Sign up</a></p>
         </div>
-        <div class="modal-body">
-        <app-dlogin></app-dlogin>
+
+        <div *ngIf="loginState === 'signup'" class="row mt-3">
+          <p class="text-info hover">Already have an account?
+            <a class="text-decoration-underline cursor-pointer" (click)="loginState = 'login'">Login</a></p>
         </div>
+
       </div>
     </div>
+  </div>
+</div>
