--- a/angularproject/src/app/default/dleftsidebar/dleftsidebar.component.html
+++ b/angularproject/src/app/default/dleftsidebar/dleftsidebar.component.html
@@ -1,11 +1,31 @@
-<div style="margin-top: 20px;">
-    <a [routerLink]="['products']" class="btn btn-primary btn-block mb-3">Product Filter</a>
-    
-    
-<!-- First Filter -->
-    <div class="card">
+<div class="mt-5">
+  <a [routerLink]="['products']" class="btn btn-primary btn-block mb-3">Product Filter</a>
+
+
+  <!-- First Filter -->
+  <div class="card mb-0">
+    <div class="card-header">
+      <h3 class="card-title">Categories</h3>
+
+      <div class="card-tools">
+        <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
+        </button>
+      </div>
+    </div>
+    <div class="card-body p-0">
+      <ul class="nav nav-pills flex-column">
+        <li class="nav-item active" *ngFor="let category of categories">
+          <a class="nav-link">
+            {{category.key}}
+          </a>
+        </li>
+      </ul>
+    </div>
+
+    <!-- Second Filter -->
+    <div class="card mb-0">
       <div class="card-header">
-        <h3 class="card-title">Categories</h3>
+        <h3 class="card-title">Brands</h3>
 
         <div class="card-tools">
           <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
@@ -14,65 +34,14 @@
       </div>
       <div class="card-body p-0">
         <ul class="nav nav-pills flex-column">
-          <li class="nav-item active">
-            <a href="#" class="nav-link">
-              Male Shoes
-              <span class="badge bg-primary float-right" _msttexthash="9659" _msthash="119">12</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">
-              Female Shoes
+          <li class="nav-item active" *ngFor="let brand of brands">
+            <a class="nav-link">
+              {{brand.key}}
+              <span *ngIf="brand.count" class="badge bg-primary float-right">{{brand.count}}</span>
             </a>
           </li>
         </ul>
       </div>
-
-      <!-- Second Filter -->
-      <div class="card">
-        <div class="card-header">
-          <h3 class="card-title">Brands</h3>
-  
-          <div class="card-tools">
-            <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
-            </button>
-          </div>
-        </div>
-        <div class="card-body p-0">
-          <ul class="nav nav-pills flex-column">
-            <li class="nav-item active">
-              <a href="#" class="nav-link">
-                Adidas
-                <span class="badge bg-primary float-right" _msttexthash="9659" _msthash="119">12</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">
-                Nike
-              </a>
-            </li>
-
-            <li class="nav-item">
-                <a href="#" class="nav-link">
-                  Puma
-                </a>
-              </li>
-
-              <li class="nav-item">
-                <a href="#" class="nav-link">
-                  Hosentoger
-                </a>
-              </li>
-
-              <li class="nav-item">
-                <a href="#" class="nav-link">
-                  Zara
-                </a>
-              </li>
-
-          </ul>
-        </div>
-      <!-- /.card-body -->
     </div>
-    <!-- /.card -->
+  </div>
 </div>
