--- a/angularproject/src/app/default/dregistration/dregistration.component.html
+++ b/angularproject/src/app/default/dregistration/dregistration.component.html
@@ -1,27 +1,28 @@
-<div style="border:2px solid gray; margin-top: 20px">
-    <div class="card-body">
-      <div class="form-group">
-        <label for="name">Name</label>
-        <input type="email" class="form-control" id="name" placeholder="Enter name">
-      </div>
-      <div class="form-group">
-        <label for="email">E-mail address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter E-mail address">
-      </div>
-      <div class="form-group">
-        <label for="pass">Password</label>
-        <input type="password" class="form-control" id="pass" placeholder="Jelszó">
-      </div>
-
-      <div class="form-group">
-        <label for="cpass">Confirm-Password</label>
-        <input type="password" class="form-control" id="cpass" placeholder="Confirm Password">
-      </div>
-
+<div class="card">
+  <div class="card-body">
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input type="email" class="form-control" id="name" placeholder="Enter name">
     </div>
-    <!-- /.card-body -->
-
-    <div class="card-footer">
-      <button type="submit" (click)="add()" class="btn btn-primary">Register</button>
+    <div class="form-group">
+      <label for="exampleInputEmail1">E-mail address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter E-mail address">
     </div>
+    <div class="form-group">
+      <label for="pass">Password</label>
+      <input type="password" class="form-control" id="pass" placeholder="Enter Password">
+    </div>
+
+    <div class="form-group">
+      <label for="cpass">Confirm-Password</label>
+      <input type="password" class="form-control" id="cpass" placeholder="Confirm Password">
+    </div>
+
+  </div>
+  <!-- /.card-body -->
+
+  <div class="card-footer">
+    <button type="button" class="btn btn-secondary" (click)="hide()">Cancel</button>
+    <button type="submit" (click)="add()" class="btn btn-primary ml-2">Register</button>
+  </div>
 </div>
